Changelog
=========

1.1.0 (unreleased)
------------------

 - Nothing changed yet.


1.0.9 (2015-02-17)
------------------

- Enable booking bar view everywhere to fix @@dashboard view
- Fix total estimates into @@report view on story
  [simahawk]

1.0.8 (2015-01-05)
------------------

- Removed some useless memoizations,
  better handling of caching in some occurrences. [simone]


1.0.7 (2014-11-18)
------------------

- Fix report view results by context (story, iteration)
- Add contextual report button
  [simahawk]


1.0.6 (2014-09-30)
------------------

- In the short_uuid indexer there was a problem when a user
  has only a partial view of catalog:
  correctly identifies a value as being already taken
  but fails in retrieving the UUID for check (should quit) [simone]


1.0.5 (1970-01-01)
------------------

..warning:: You must rebuild the mo files with msgfmt

- In compass history, deleted projects are shown in gray.
  The reported values for them are not correct.
  [simone]

- Add `projects_overview` view, a smart search view for projects
  based on plone.app.search. Note: as of today (2014-09-08)
  it requires plone.app.search branch=simahawk-imp
  [simahawk]


1.0.4 (1970-01-01)
------------------

..warning:: You must rebuild the mo files with msgfmt

- Fix bug #85
  [simone]
- Added total count per resource in booking history.
  [simone]


1.0.3 (1970-01-01)
------------------

- Improve worklog, display and select current user on startup
  [gborelli]


1.0.2 (1970-01-01)
------------------

- Added employee selection in compass history. [simone]


1.0 (1970-01-01)
----------------

- Improve customer_contact field
  [gborelli]

- Fix compass view's booking retrieval
  [simahawk]

- Add link to project and story in worklog booking details
  [gborelli]

- Add customer_contact in IProject and collective.z3cform.datagridfield dependency
  [gborelli]
