@@ -4,7 +4,8 @@ Changelog
 1.1.0 (unreleased)
 ------------------
 
- - Nothing changed yet.
+- Add extra trackers listing to dashboard view
+  [simahawk]
 
 
 1.0.9 (2015-02-17)
